# mosyne-api

./: .dockerignore  .editorconfig  .flake8  .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: mosine.yaml
app/: .env.example  aerich.ini  config.py  db.py  main.py  prestart.sh
app/api/: __init__.py
app/api/angels/: controller.py  enums.py  models.py  router.py  routers.py  schema.py
app/api/angels/models/: __init__.py  angel.py  contact.py
app/api/auth/: controller.py  google.py  router.py  schema.py
app/api/users/: controller.py  models.py  router.py  schema.py
app/api/users/models/: __init__.py  address.py  user.py
app/api/utils/: exceptions.py  models.py  responses.py  security.py
app/db/: settings.py
app/db/migrations/models/: 0_20201023021031_init.json  10_20201022214225_update.json  11_20201022214326_update.json  1_20201023021101_update.json  7_20201021234826_update.json  8_20201022201131_update.json  9_20201022210624_update.json
app/services/mails/: functions.py  sender.py  services.py
app/services/mails/templates/: angel_advise.html  password_recovery.html  recovery_password.html  welcome.html
app/services/pdf/: functions.py  generator.py
app/services/qr/: __init__.py  generator.py
app/services/storage/: __init__.py  connection.py  upload.py
app/tests/: conftest.py
app/tests/api/: test_angels.py  test_auth.py  test_users.py
scripts/: build.sh  format.sh  start.sh
(+2 files in other folders)
